tests/ui/consts/const-eval/issue-50814.stderr
error[E0080]: attempt to compute `u8::MAX + u8::MAX`, which would overflow
  --> $DIR/issue-50814.rs:16:21
   |
LL |     const MAX: u8 = A::MAX + B::MAX;
   |                     ^^^^^^^^^^^^^^^ evaluation of `<Sum<U8, U8> as Unsigned>::MAX` failed here

note: erroneous constant encountered
  --> $DIR/issue-50814.rs:22:6
   |
LL |     &Sum::<U8, U8>::MAX
   |      ^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
